[NGRINDER-712] Detect the perm gen size and show error if not enough.